# vscode_cpp

./: .clang-format  CMakeLists.txt  README.md  vscode_cpp_generator.bat
src/: main.cpp  solution.h
src/tests/benchmarks/: benchmark_test_1.cpp  benchmark_test_2.cpp
src/tests/tests/: main.cpp  tests.cpp
